refactor(checkbox): Stop using ElementReference.Id

--- a/src/Leonardo.AspNetCore.Components.Material/Checkbox/MDCCheckbox.razor
+++ b/src/Leonardo.AspNetCore.Components.Material/Checkbox/MDCCheckbox.razor
@@ -1,6 +1,6 @@
 @inherits MaterialComponent
 <div class="@ClassString">
-    <div class="@CheckboxCssClass" id="@Id" @ref="mdcCheckboxElement">
+    <div class="@CheckboxCssClass" id="@Id" @ref="_MDCCheckbox">
         <input type="checkbox"
                class="mdc-checkbox__native-control"
                id="@LabelId"
