feat(circular-progress): Initial scaffolding

--- a/examples/Blazor.Material.Components.WebApp/Shared/NavMenu.razor
+++ b/examples/Blazor.Material.Components.WebApp/Shared/NavMenu.razor
@@ -1,6 +1,7 @@
 ﻿<MDCDrawerNavLink Text="Home" Href="" Match="NavLinkMatch.All" />
 <MDCDrawerNavLink Text="Button" Href="component/button" />
 <MDCDrawerNavLink Text="Checkbox" Href="component/checkbox" />
+<MDCDrawerNavLink Text="Circular Progress" Href="component/circular-progress" />
 <MDCDrawerNavLink Text="Data Table" Href="component/data-table" />
 <MDCDrawerNavLink Text="Drawer" Href="component/drawer" Match="NavLinkMatch.Prefix" />
 <MDCDrawerNavLink Text="Select" Href="component/select" />
