--- a/examples/Blazor.Material.Components.WebApp/_Imports.razor
+++ b/examples/Blazor.Material.Components.WebApp/_Imports.razor
@@ -10,6 +10,7 @@
 @using Leonardo.AspNetCore.Components.Material
 @using Leonardo.AspNetCore.Components.Material.Button
 @using Leonardo.AspNetCore.Components.Material.Checkbox
+@using Leonardo.AspNetCore.Components.Material.CircularProgress
 @using Leonardo.AspNetCore.Components.Material.DataTable
 @using Leonardo.AspNetCore.Components.Material.Drawer
 @using Leonardo.AspNetCore.Components.Material.Select
