--- a/src/Leonardo.AspNetCore.Components.Material/TopAppBar/MDCTopAppBar.razor.scss
+++ b/src/Leonardo.AspNetCore.Components.Material/TopAppBar/MDCTopAppBar.razor.scss
@@ -1,2 +1,4 @@
+@use "@material/icon-button";
 @use "@material/top-app-bar/mdc-top-app-bar";
-@use "@material/icon-button/mdc-icon-button";
+
+@include icon-button.core-styles;
