--- a/src/Leonardo.AspNetCore.Components.Material/app.scss
+++ b/src/Leonardo.AspNetCore.Components.Material/app.scss
@@ -5,6 +5,7 @@
 @use './Drawer/MDCDrawer.razor.scss';
 @use './Select/MDCSelect.razor.scss';
 @use './Snackbar/MDCSnackbar.razor.scss';
+@use './Switch/MDCSwitch.razor.scss';
 @use './TabBar/MDCTabBar.razor.scss';
 @use './TextField/MDCTextField.razor.scss';
 @use './TopAppBar/MDCTopAppBar.razor.scss';
