--- a/examples/Blazor.Material.Components.WebApp/Shared/NavMenu.razor
+++ b/examples/Blazor.Material.Components.WebApp/Shared/NavMenu.razor
@@ -6,6 +6,7 @@
 <MDCDrawerNavLink Text="Drawer" Href="component/drawer" Match="NavLinkMatch.Prefix" />
 <MDCDrawerNavLink Text="Select" Href="component/select" />
 <MDCDrawerNavLink Text="Snackbar" Href="component/snackbar" />
+<MDCDrawerNavLink Text="Switch" Href="component/switch" />
 <MDCDrawerNavLink Text="Tab Bar" Href="component/tabs" />
 <MDCDrawerNavLink Text="Text Field" Href="component/text-field" />
 <MDCDrawerNavLink Text="Top App Bar" Href="component/top-app-bar" />
