feat(switch): Basic HTML structure

--- a/examples/Blazor.Material.Components.WebApp/Pages/SwitchCatalog.razor
+++ b/examples/Blazor.Material.Components.WebApp/Pages/SwitchCatalog.razor
@@ -1,10 +1,15 @@
 ﻿@page "/component/switch"
 <ComponentCatalogPanel Title="Switch">
     <HeroComponent>
-        <MDCSwitch />
+        <MDCSwitch Label="@Label" />
     </HeroComponent>
+    <HeroComponentOptions>
+        <ComponentOption>
+            <MDCTextField Label="Label" Variant="MDCTextFieldStyle.Outlined" @bind-Value="@Label" />
+        </ComponentOption>
+    </HeroComponentOptions>
 </ComponentCatalogPanel>
 
 @code {
-
+    private string Label { get; set; } = "off/on";
 }
