--- a/src/Leonardo.AspNetCore.Components.Material/Switch/MDCSwitch.razor
+++ b/src/Leonardo.AspNetCore.Components.Material/Switch/MDCSwitch.razor
@@ -1,9 +1,12 @@
 @inherits MaterialComponent
-<div class="@ClassString">
+<div class="@ClassString" @ref="_MDCSwitch">
     <div class="mdc-switch__track"></div>
     <div class="mdc-switch__thumb-underlay">
         <div class="mdc-switch__thumb"></div>
-        <input type="checkbox" id="basic-switch" class="mdc-switch__native-control" role="switch" aria-checked="false">
+        <input type="checkbox" id="@InputId" class="mdc-switch__native-control" role="switch" aria-checked="false">
     </div>
 </div>
-<label for="basic-switch">off/on</label>
+@if (!string.IsNullOrWhiteSpace(Label))
+{
+<label for="@InputId">@Label</label>
+}
