--- a/src/Leonardo.AspNetCore.Components.Material/Switch/MDCSwitch.razor
+++ b/src/Leonardo.AspNetCore.Components.Material/Switch/MDCSwitch.razor
@@ -3,7 +3,13 @@
     <div class="mdc-switch__track"></div>
     <div class="mdc-switch__thumb-underlay">
         <div class="mdc-switch__thumb"></div>
-        <input type="checkbox" id="@InputId" class="mdc-switch__native-control" role="switch" aria-checked="false">
+        <input type="checkbox"
+               id="@InputId"
+               class="mdc-switch__native-control"
+               role="switch"
+               @oninput="OnValueChanged"
+               aria-checked="false"
+               checked="@Value">
     </div>
 </div>
 @if (!string.IsNullOrWhiteSpace(Label))
