--- a/src/Leonardo.AspNetCore.Components.Material/Drawer/MDCDrawerNavLink.razor
+++ b/src/Leonardo.AspNetCore.Components.Material/Drawer/MDCDrawerNavLink.razor
@@ -1,5 +1,6 @@
 @using Microsoft.AspNetCore.Components.Routing
 <NavLink class="mdc-list-item" ActiveClass="mdc-list-item--activated" aria-current="page" Match="@Match" href="@Href">
+    <span class="mdc-list-item__ripple"></span>
     <i class="material-icons mdc-list-item__graphic" aria-hidden="true">@Icon</i>
     <span class="mdc-list-item__text">@Text</span>
 </NavLink>
