--- a/src/Leonardo.AspNetCore.Components.Material/DataTable/MDCDataTable.razor
+++ b/src/Leonardo.AspNetCore.Components.Material/DataTable/MDCDataTable.razor
@@ -1,35 +1,37 @@
 @inherits MDCDataTable
 @typeparam TItem
 <div class="@ClassString">
-    <table class="mdc-data-table__table" aria-label="@Label">
-        <CascadingValue Value=this>
-            @ChildContent
-            <thead>
-                <tr class="mdc-data-table__header-row">
-                    @foreach (var column in Columns)
-                    {
-                        <th class="@column.GetHeaderCssClass()" role="columnheader" scope="col">@column.Header</th>
-                    }
-                </tr>
-            </thead>
-            <tbody class="mdc-data-table__content">
-                @foreach (var item in DataSource)
-                {
-                    <tr class="mdc-data-table__row">
+    <div class="mdc-data-table__table-container">
+        <table class="mdc-data-table__table" aria-label="@Label">
+            <CascadingValue Value=this>
+                @ChildContent
+                <thead>
+                    <tr class="mdc-data-table__header-row">
                         @foreach (var column in Columns)
                         {
-                            @if (column.DataTemplate != null)
-                            {
-                                <td class="@column.GetCellCssClass()">@column.DataTemplate(item)</td>
-                            }
-                            else
-                            {
-                                <td class="@column.GetCellCssClass()">@GetItemDisplayText(item, column.DataMember)</td>
-                            }
+                            <th class="@column.GetHeaderCssClass()" role="columnheader" scope="col">@column.Header</th>
                         }
                     </tr>
-                }
-            </tbody>
-        </CascadingValue>
-    </table>
+                </thead>
+                <tbody class="mdc-data-table__content">
+                    @foreach (var item in DataSource)
+                    {
+                        <tr class="mdc-data-table__row">
+                            @foreach (var column in Columns)
+                            {
+                                @if (column.DataTemplate != null)
+                                {
+                                    <td class="@column.GetCellCssClass()">@column.DataTemplate(item)</td>
+                                }
+                                else
+                                {
+                                    <td class="@column.GetCellCssClass()">@GetItemDisplayText(item, column.DataMember)</td>
+                                }
+                            }
+                        </tr>
+                    }
+                </tbody>
+            </CascadingValue>
+        </table>
+    </div>
 </div>
