--- a/examples/Blazor.Material.Components.WebApp/Shared/ComponentOption.razor
+++ b/examples/Blazor.Material.Components.WebApp/Shared/ComponentOption.razor
@@ -1,7 +1,5 @@
-﻿<li class="mdc-list-item catalog-tf-list-item">
-    <div>
-        @ChildContent
-    </div>
+﻿<li class="component-options-list--item">
+    @ChildContent
 </li>
 
 @code {
