--- a/src/Leonardo.AspNetCore.Components.Material/CircularProgress/DeterminateCircleGraphic.razor
+++ b/src/Leonardo.AspNetCore.Components.Material/CircularProgress/DeterminateCircleGraphic.razor
@@ -1,3 +1,4 @@
 <svg class="mdc-circular-progress__determinate-circle-graphic" viewBox="0 0 48 48" xmlns="http://www.w3.org/2000/svg">
-    <circle class="mdc-circular-progress__determinate-circle" cx="24" cy="24" r="18" stroke-dasharray="113.097" stroke-dashoffset="113.097" />
+    <circle class="mdc-circular-progress__determinate-track" cx="24" cy="24" r="18" stroke-width="4" />
+    <circle class="mdc-circular-progress__determinate-circle" cx="24" cy="24" r="18" stroke-dasharray="113.097" stroke-dashoffset="113.097" stroke-width="4" />
 </svg>
