--- a/src/Leonardo.AspNetCore.Components.Material/CircularProgress/MDCCircularProgress.razor
+++ b/src/Leonardo.AspNetCore.Components.Material/CircularProgress/MDCCircularProgress.razor
@@ -1,5 +1,5 @@
 @inherits MaterialComponent
-<div class="@ClassString" @ref="_MDCCircularProgress" role="progressbar" aria-label="@Label" aria-valuemin="0" aria-valuemax="1">
+<div class="@ClassString" @ref="_MDCCircularProgress" style="width:48px;height:48px;" role="progressbar" aria-label="@Label" aria-valuemin="0" aria-valuemax="1">
     <div class="mdc-circular-progress__determinate-container">
         <DeterminateCircleGraphic />
     </div>
