--- a/src/Leonardo.AspNetCore.Components.Material/Select/MDCSelect.razor.scss
+++ b/src/Leonardo.AspNetCore.Components.Material/Select/MDCSelect.razor.scss
@@ -1,4 +1,6 @@
 @use "@material/list/mdc-list";
 @use "@material/menu-surface/mdc-menu-surface";
 @use "@material/menu/mdc-menu";
-@use "@material/select/mdc-select";
+@use "@material/select/select";
+
+@include select.core-styles();
