--- a/examples/Blazor.Material.Components.WebApp/Shared/MainLayout.razor
+++ b/examples/Blazor.Material.Components.WebApp/Shared/MainLayout.razor
@@ -1,4 +1,4 @@
-﻿@inherits LayoutComponentBase
+@inherits LayoutComponentBase
 
 <MDCTopAppBar class="app-bar"
               Title="Material Blazor Components"
