chore: Upgrade to @material v9.0.0

--- a/examples/Blazor.Material.Components.WebApp/Pages/CircularProgressCatalog.razor
+++ b/examples/Blazor.Material.Components.WebApp/Pages/CircularProgressCatalog.razor
@@ -12,5 +12,5 @@
 </ComponentCatalogPanel>
 
 @code{
-    private bool Indeterminate { get; set; }
+    private bool Indeterminate { get; set; } = true;
 }
