--- a/src/Leonardo.AspNetCore.Components.Material/Button/MDCButton.razor
+++ b/src/Leonardo.AspNetCore.Components.Material/Button/MDCButton.razor
@@ -1,6 +1,6 @@
 @inherits MaterialComponent
 <button class="@ClassString" @ref="mdcButtonElement" @onclick=OnClick disabled="@Disabled">
-    <div class="mdc-button__ripple"></div>
+    <span class="mdc-button__ripple"></span>
 
     @if (!string.IsNullOrWhiteSpace(LeadingIcon))
     {
