--- a/src/Leonardo.AspNetCore.Components.Material/CircularProgress/MDCCircularProgress.razor
+++ b/src/Leonardo.AspNetCore.Components.Material/CircularProgress/MDCCircularProgress.razor
@@ -7,8 +7,9 @@
         <div class="mdc-circular-progress__spinner-layer">
             <div class="mdc-circular-progress__circle-clipper mdc-circular-progress__circle-left">
                 <IndeterminateCircleGraphic />
-            </div><div class="mdc-circular-progress__gap-patch">
-                <IndeterminateCircleGraphic />
+            </div>
+            <div class="mdc-circular-progress__gap-patch">
+                <IndeterminateCircleGraphic StrokeWidth="3.2m" />
             </div><div class="mdc-circular-progress__circle-clipper mdc-circular-progress__circle-right">
                 <IndeterminateCircleGraphic />
             </div>
