--- a/src/Leonardo.AspNetCore.Components.Material/CircularProgress/IndeterminateCircleGraphic.razor
+++ b/src/Leonardo.AspNetCore.Components.Material/CircularProgress/IndeterminateCircleGraphic.razor
@@ -1,3 +1,6 @@
 <svg class="mdc-circular-progress__indeterminate-circle-graphic" viewBox="0 0 48 48" xmlns="http://www.w3.org/2000/svg">
-    <circle cx="24" cy="24" r="18" stroke-dasharray="113.097" stroke-dashoffset="56.549" stroke-width="4" />
+    <circle cx="24" cy="24" r="18" stroke-dasharray="113.097" stroke-dashoffset="56.549" stroke-width="@StrokeWidth" />
 </svg>
+@code {
+    [Parameter] public decimal StrokeWidth { get; set; } = 4m;
+}
