--- a/src/Leonardo.AspNetCore.Components.Material/Snackbar/MDCSnackbar.razor
+++ b/src/Leonardo.AspNetCore.Components.Material/Snackbar/MDCSnackbar.razor
@@ -1,28 +1,28 @@
 @inherits MaterialComponent
 <div class="@ClassString" @ref="_MDCSnackbar" id="@Id">
-    <div class="mdc-snackbar__surface">
-        <div class="mdc-snackbar__label"
-             role="status"
-             aria-live="polite">
+
+    <div class="mdc-snackbar__surface" role="status" aria-relevant="additions">
+        
+        <div class="mdc-snackbar__label" aria-atomic="false">
             @Text
         </div>
 
-        @if (HasActions)
-        {
-            <div class="mdc-snackbar__actions">
-                @if (!string.IsNullOrWhiteSpace(ButtonLabel))
-                {
-                    <button type="button" class="mdc-button mdc-snackbar__action">
-                        <div class="mdc-button__ripple"></div>
-                        <span class="mdc-button__label">@ButtonLabel</span>
-                    </button>
-                }
+            @if (HasActions)
+            {
+                <div class="mdc-snackbar__actions">
+                    @if (!string.IsNullOrWhiteSpace(ButtonLabel))
+                    {
+                        <button type="button" class="mdc-button mdc-snackbar__action">
+                            <div class="mdc-button__ripple"></div>
+                            <span class="mdc-button__label">@ButtonLabel</span>
+                        </button>
+                    }
 
-                @if (HasDismissIcon)
-                {
-                    <button class="mdc-icon-button mdc-snackbar__dismiss material-icons" title="Dismiss">close</button>
-                }
-            </div>
-        }
+                    @if (HasDismissIcon)
+                    {
+                        <button class="mdc-icon-button mdc-snackbar__dismiss material-icons" title="Dismiss">close</button>
+                    }
+                </div>
+            }
+        </div>
     </div>
-</div>
