--- a/examples/Blazor.Material.Components.WebApp/Pages/TopAppBarCatalog.razor
+++ b/examples/Blazor.Material.Components.WebApp/Pages/TopAppBarCatalog.razor
@@ -11,5 +11,5 @@
 </ComponentCatalogPanel>
 
 @code {
-    private string Title { get; set; } = "Croydon, UK";
+    private string Title { get; set; } = "London, UK";
 }
